--- a/infrastructure/redis/values.yaml
+++ b/infrastructure/redis/values.yaml
@@ -3,10 +3,9 @@
 usePassword: false
 cluster:
   enabled: false
+architecture: standalone
 master:
   persistence:
     enabled: false
-replica:
-  replicaCount: 1
 volumePermissions:
   enabled: true
