--- a/apps/base/podinfo/release.yaml
+++ b/apps/base/podinfo/release.yaml
@@ -25,3 +25,6 @@ spec:
       enabled: true
       annotations:
         kubernetes.io/ingress.class: nginx
+    service:
+      type: NodePort
+      nodePort: 31198
